test/error/forn5.luau
local init, limit, step = 1, "hello", "hello"

for i = init, limit, step do
	print(i)
end
